# Alg

./: .gitignore  CMakeLists.txt  README.md  alg.cpp  alg.h  sorting.h
AlgSortingTest/: test_sorting.cpp
sorting/: CMakeLists.txt  sorting.h
sorting/tests/: CMakeLists.txt  test_sorting.cpp
